app/frontend/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: registry-mahasiswa
spec:
  stripPrefix:
    prefixes:
      - /api
