app/frontend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: registry-mahasiswa
spec:
  selector:
    app: frontend
  ports:
    - port: 80
      targetPort: 80
